[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/textures/enemies/cat/Walk (10).png" type="Texture" id=1]
[ext_resource path="res://src/entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://src/entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/enemies/DetectionArea.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/enemies/cat/Walk (8).png" type="Texture" id=6]
[ext_resource path="res://assets/textures/enemies/cat/Walk (3).png" type="Texture" id=7]
[ext_resource path="res://assets/textures/enemies/cat/Walk (5).png" type="Texture" id=8]
[ext_resource path="res://assets/textures/enemies/cat/Walk (7).png" type="Texture" id=9]
[ext_resource path="res://assets/textures/enemies/cat/Walk (9).png" type="Texture" id=10]
[ext_resource path="res://assets/textures/enemies/cat/Walk (1).png" type="Texture" id=11]
[ext_resource path="res://assets/textures/enemies/cat/Walk (6).png" type="Texture" id=12]
[ext_resource path="res://assets/textures/enemies/cat/Walk (2).png" type="Texture" id=13]
[ext_resource path="res://assets/textures/enemies/cat/Walk (4).png" type="Texture" id=14]
[ext_resource path="res://assets/textures/enemies/cat/Idle (9).png" type="Texture" id=15]
[ext_resource path="res://assets/textures/enemies/cat/Idle (1).png" type="Texture" id=16]
[ext_resource path="res://assets/textures/enemies/cat/Idle (4).png" type="Texture" id=17]
[ext_resource path="res://assets/textures/enemies/cat/Idle (2).png" type="Texture" id=18]
[ext_resource path="res://assets/textures/enemies/cat/Idle (3).png" type="Texture" id=19]
[ext_resource path="res://assets/textures/enemies/cat/Idle (5).png" type="Texture" id=20]
[ext_resource path="res://assets/textures/enemies/cat/Idle (6).png" type="Texture" id=21]
[ext_resource path="res://assets/textures/enemies/cat/Idle (7).png" type="Texture" id=22]
[ext_resource path="res://assets/textures/enemies/cat/Idle (8).png" type="Texture" id=23]
[ext_resource path="res://assets/textures/enemies/cat/Fall (8).png" type="Texture" id=24]
[ext_resource path="res://assets/textures/enemies/cat/Fall (6).png" type="Texture" id=25]
[ext_resource path="res://assets/textures/enemies/cat/Fall (7).png" type="Texture" id=26]
[ext_resource path="res://assets/textures/enemies/cat/Fall (1).png" type="Texture" id=27]
[ext_resource path="res://assets/textures/enemies/cat/Fall (3).png" type="Texture" id=28]
[ext_resource path="res://assets/textures/enemies/cat/Fall (2).png" type="Texture" id=29]
[ext_resource path="res://assets/textures/enemies/cat/Fall (5).png" type="Texture" id=30]
[ext_resource path="res://assets/textures/enemies/cat/Fall (4).png" type="Texture" id=31]
[ext_resource path="res://assets/textures/enemies/cat/Dead (2).png" type="Texture" id=32]
[ext_resource path="res://assets/textures/enemies/cat/Dead (4).png" type="Texture" id=33]
[ext_resource path="res://assets/textures/enemies/cat/Dead (7).png" type="Texture" id=34]
[ext_resource path="res://assets/textures/enemies/cat/Dead (5).png" type="Texture" id=35]
[ext_resource path="res://assets/textures/enemies/cat/Dead (8).png" type="Texture" id=36]
[ext_resource path="res://assets/textures/enemies/cat/Dead (10).png" type="Texture" id=37]
[ext_resource path="res://assets/textures/enemies/cat/Dead (3).png" type="Texture" id=38]
[ext_resource path="res://assets/textures/enemies/cat/Dead (6).png" type="Texture" id=39]
[ext_resource path="res://assets/textures/enemies/cat/Dead (9).png" type="Texture" id=40]
[ext_resource path="res://assets/textures/enemies/cat/Dead (1).png" type="Texture" id=41]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 40 ) ],
"loop": false,
"name": "Die",
"speed": 24.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 24 ) ],
"loop": true,
"name": "Fall",
"speed": 24.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 1 ) ],
"loop": true,
"name": "Walk",
"speed": 24.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 32.0
height = 62.0

[sub_resource type="CircleShape2D" id=2]
radius = 328.39

[node name="Turret" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
mode = 2
gravity_scale = 4.0
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="Collapsing_observer" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 50 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -30.0339 )

[node name="turret" type="AnimatedSprite" parent="."]
position = Vector2( 10.3879, -25.625 )
scale = Vector2( 0.233598, 0.276899 )
frames = SubResource( 3 )
animation = "Fall"
frame = 6
playing = true
offset = Vector2( 27, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, -24 )
scale = Vector2( 1, 0.898 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0.0428963, -30.0659 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
modulate = Color( 1, 1, 1, 0.301961 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 10, 8 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="turret" to="." method="_on_turret_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
